# github_actions_test

./: .gitignore  CMakeLists.txt  config_macros.hpp  run_clang_tests.sh  run_clang_tests_macos.sh  run_gcc_mingw_32_tests.sh  run_gcc_mingw_64_tests.sh  run_gcc_tests.sh  run_msvc_tests.bat  test.cpp
.github/workflows/: freebsd.yml  macos.yml  macos.yml.disabled  ubuntu.yml  windows.yml  windows.yml.disabled
